# server

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  go.cmd  go.mod  go.sum  main.cpp  main.go  main.h  open_msvc.cmd  run.cmd
server/: cgo.cpp  cgo.h  client.cpp  client.h  common.h
tools/: write_timestamp.cmake
